[package]
name = "command-is-now-found-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
os-release = "0.1.0"
reqwest = { version = "0.11.11", features = ["blocking"] }
thiserror = "1.0.33"
