[package]
name = "command-is-now-found"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }  # I don't want to deal with the API breakage (I blame DuckDuckGo for giving me a link to outdated docs)
pretty_env_logger = "0.4.0"
os-release = "0.1.0"
reqwest = { version = "0.11.11", features = ["blocking"] }
thiserror = "1.0.33"
log = "0.4.17"
env_logger = "0.9.0"
scraper = "0.13.0"
html-escape = "0.2.11"
strfmt = "0.2.2"
chrono = "0.4.22"
termcolor = "1.1.3"
ansi_term = "0.12.1"
terminal_size = "0.2.1"
question = "0.2.2"
crossterm = "0.25.0"
